# libepoxy

./: .gitignore  README.md  meson.build  meson_options.txt
include/vapi/: meson.build
registry/: gl.xml
src/: gen_dispatch.py  meson.build  name_shortener.py
